# chatroom-server

./: .env  .gitignore  CMakeLists.txt  Dockerfile  build.sh  test  test_client.cpp
docs/: architecture.drawio  static.drawio
install/lib/cmake/absl/: abslTargets-noconfig.cmake  abslTargets.cmake
install/lib/cmake/re2/: re2Targets.cmake
install/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_bounded_utf8_length_sequence.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  (+152 more)
lib/dotenv/common/libs/antlr4-cpp-runtime/: CMakeLists.txt
src/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
src/API/: CMakeLists.txt  V1.h
src/API/v1/: v1.h
src/API/v1/Database/: DBAdapter.h  Database.h  MongoDB.cpp  MongoDB.h  MongoDBGateway.cpp
src/API/v1/Gateway/: Gateway.h
src/Client/: Client.cpp  Client.h  UserClient.cpp  UserClient.h
src/HTTP/: CMakeLists.txt  HTTP.h
src/HTTP/Constants/: APIVersions.h  Methods.h  Paths.h  StatusCodes.h
src/HTTP/Utilities/: HTTPParser.cpp  HTTPParser.h  Request.cpp  Request.h
src/Server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ClientsGateway.cpp  ClientsGateway.h  HTTPChatroomServer.h  HTTPParser.cpp  ServerState.cpp  ServerState.h
src/Server/Database/: DBAdapter.h  Database.h  MongoDBGateway.h
src/Server/HTTP/: CMakeLists.txt  HTTP.h  HTTPParser.h
src/Server/HTTP/Constants/: Paths.h
src/Server/HTTP/Utilities/: HTTPParser.cpp  HTTPParser.h  Request.cpp  Request.h
src/Server/Threads/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
src/client/: Client.cpp  Client.h
